# AM32

./: .clang-format  .clang-format-ignore  .cproject  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .project  AM32_CODE_ANALYSIS.md  AM32_REFACTORING_SUMMARY.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  Makefile  README.md  STM32F051K6TX_FLASH.ld  a153makefile.mk  am32.params  asan.sh  compile_commands.json  e230makefile.mk  f031makefile.mk  f051_ll_bi_dir Debug.launch  f051_ll_bi_dir.ioc  f051makefile.mk  f415makefile.mk  f421makefile.mk  flow_diagram.md  format.sh  g031makefile.mk  g051makefile.mk  g071makefile.mk  g431makefile.mk  gd32makefile.mk  generate_eeprom.py  h563makefile.mk  l431makefile.mk  makefile  openocd-h5-cmsis-dap.cfg  (+8 more)
Inc/: ADC.h  IO.h  WS2812.h  adc_telemetry.h  check_defines.h  common.h  comparator.h  constants.h  control_loops.h  control_loops_inline.h  cyclic_telem.h  dshot.h  eeprom.h  eeprom.json  firmwareversion.h  functions.h  hwci_perf.h  input_processing.h  input_processing_inline.h  kiss_telemetry.h  lookup_tables.h  motor_control.h  motor_control_inline.h  ntc_tables.h  peripherals.h  phaseouts.h  pid_control.h  pwm_control.h  serial_telemetry.h  signal.h  sounds.h  sport_telemetry.h  system_config.h  targets.h  telemetry_protocol.h  version.h
Keil_Projects/: AM32_MultiProject.uvmpw  AM32_MultiProject.uvmpw.uvgui.alkaz  Am32F031.uvguix.alkaz  Am32F031.uvoptx  Am32F031.uvprojx  Am32F051.uvguix.alkaz  Am32F051.uvoptx  Am32F051.uvprojx  Am32F415.uvguix.alkaz  Am32F415.uvoptx  Am32F415.uvprojx  Am32F421.uvguix.alkaz  Am32F421.uvoptx  Am32F421.uvprojx  Am32G031.uvoptx  Am32G031.uvprojx  Am32G071.cbuild-idx.yml  Am32G071.cbuild-pack.yml  Am32G071.cproject.yml  Am32G071.csolution.yml  (+20 more)
hwci/: .gitignore  README.md  pyproject.toml  requirements.txt
hwci/baselines/: ARK_4IN1_F051.json  ARK_4IN1_F051_HQ5136.json  README.md
hwci/config/: rig.example.yaml
hwci/hwci/: __init__.py  baseline.py  build.py  cli.py  config.py  elf.py  metrics.py  model.py  perf.py  perf_reader.py  report.py  runner.py  settings.py  sim.py  tuner.py
hwci/hwci/debugger/: __init__.py  base.py  openocd.py
hwci/hwci/esc_telem/: __init__.py  kiss.py
hwci/hwci/flightstand/: __init__.py  base.py  grpc_client.py  simulator.py
hwci/hwci/profiles/: ci_smoke.yaml  cutoff_test.yaml  demag_step_stress.yaml  efficiency_sweep.yaml  jitter_probe.yaml  jitter_probe_mid.yaml  low_rpm_crawl.yaml  noprop_baseline.yaml  noprop_smoke.yaml  startup_reliability.yaml  tune_probe.yaml
hwci/hwci/throttle/: __init__.py  base.py  external.py  flightstand_src.py
hwci/scripts/: 99-hwci.rules  setup_ubuntu.sh
hwci/tests/: conftest.py  test_app_alive.py  test_baseline.py  test_battery.py  test_cli.py  test_config.py  test_elf.py  test_flightstand_sim.py  test_kiss.py  test_metrics.py  test_perf.py  test_perf_reader.py  test_report.py  test_runner_safety.py  test_runner_sim.py  test_settings.py  test_sim.py  test_tail_reset_margin.py  test_tare.py  test_throttle_map.py  test_tune_resume.py  test_tune_spec.py  test_tuner.py
hwci/tunes/: example.yaml  quick.yaml
(+1255 files in other folders)
